--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 Awaiting district
             </div>
             
-            <h1 class="neon-text">Health Compass Agent ⚕️</h1>
+            <h1 class="neon-text">Health Compass Agent ⚕</h1>
             
             <p class="tagline">Your virtual diagnosis assistant.</p>
 
